--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "gulpfile.js",
   "repository": "https://github.com/bitmap/bruno",
-  "dependencies": {
-    "in-view": "^0.4.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^6.3.1",
     "babel-core": "^6.14.0",
